Create database, scaffold, migrate
Create database with db:create
Create playlist resource with scaffold and migration

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,4 +1,4 @@
-<% project_name = 'full-stack-blog
+<% project_name = 'full-stack-blog' %>
 default: &default
   adapter: postgresql
   encoding: unicode
